src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Owning_Entity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Which Dimagi business unit owns this relationship.</inlineHelpText>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>CASE( Number_of_Open_Opps__c ,0, &apos;Passive&apos;,&apos;Active&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If there are no open opportunities the status is Passive.</inlineHelpText>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Budget__c</fullName>
        <inlineHelpText>Used for multinational organizations to track their total budget per year.</inlineHelpText>
        <label>Annual Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <inlineHelpText>What field is the account in.</inlineHelpText>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Health</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Poverty and Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Resource Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education and Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gender Equality and Women&apos;s Empowerment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water, Sanitation, &amp; Hygiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services for the Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture and Food Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governance and Accountability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training &amp; Education Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose &quot;HQ&quot; if this is a generic headquarters account that isn&apos;t aligned to a specific country.</inlineHelpText>
        <label>Account Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <inlineHelpText>Should be a generic info email if applicable.</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Follow_up_Date__c</fullName>
        <inlineHelpText>Use this field to mark a date you wish to be reminded to follow up with an account. Delete the field to turn off the reminder.</inlineHelpText>
        <label>Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Opportunity_Update__c</fullName>
        <inlineHelpText>The last time an opportunity for this account was updated.</inlineHelpText>
        <label>Last Opportunity Update</label>
        <summarizedField>Opportunity.LastModifiedDate</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MSA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do we have an MSA with this account?</inlineHelpText>
        <label>MSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memberships__c</fullName>
        <inlineHelpText>A list of memberships HQ belongs to</inlineHelpText>
        <label>Memberships</label>
        <picklist>
            <picklistValues>
                <fullName>Core Group</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Naming_Convention__c</fullName>
        <formula>&apos;[Acronym] - [Full Name] - [Country/HQ]&apos;</formula>
        <label>Naming Convention</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Country_Office__c</fullName>
        <inlineHelpText>Use to mark confirmed lack of an office</inlineHelpText>
        <label>No Country Office</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mozambique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senegal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swaziland</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_Deployments__c</fullName>
        <inlineHelpText>How many deployments are currently active.</inlineHelpText>
        <label>Number of Active Deployments</label>
        <summaryFilterItems>
            <field>Project__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Project__c.Implementing_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Deployments__c</fullName>
        <inlineHelpText>The total number of deployments (open and closed)</inlineHelpText>
        <label>Number of Deployments</label>
        <summaryForeignKey>Project__c.Implementing_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Opps__c</fullName>
        <label>Number of Open Opps</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>false</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_non_Active_Deployments__c</fullName>
        <inlineHelpText>Includes both Completed and Inactive deployments.</inlineHelpText>
        <label>Number of non-Active Deployments</label>
        <summaryFilterItems>
            <field>Project__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Project__c.Implementing_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Office_Type__c</fullName>
        <inlineHelpText>If this is a Headquarters account choose &quot;HQ&quot;. If it is a country-specific office choose &quot;Country Office&quot;.</inlineHelpText>
        <label>Office Type</label>
        <picklist>
            <picklistValues>
                <fullName>Country Office</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesforce_Account_ID__c</fullName>
        <formula>Id</formula>
        <label>Salesforce Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Validate = Need to contact; 
Connect = remind every 10 days; 
Active = an active opportunity; 
Passive = remind every 3 months.</inlineHelpText>
        <label>Status_old</label>
        <picklist>
            <picklistValues>
                <fullName>Validate</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Area__c</fullName>
        <label>Sub-Area</label>
        <picklist>
            <picklistValues>
                <fullName>*** Agriculture and Food Security ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Economic Development ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rural Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety &amp; Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Education and Training ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Childhood Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Emergency Response ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Financial Services for the Poor ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Cash Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services to the Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Gender Equality and Women&apos;s Emp ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gender Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sex Workers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Governance and Accountability ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Accountability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Health ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiac Diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cervical Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diarrhea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Planning</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <inlineHelpText>Our own tag field since the normal tags suck so bad.  Don&apos;t delete other people&apos;s tags.</inlineHelpText>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Account_Status_Connect</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Connect</value>
        </filters>
        <label>My Accounts: Connect</label>
    </listViews>
    <listViews>
        <fullName>Accounts_60_days</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Owning_Entity__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Office_Type__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <label>Accounts &gt; 60 days</label>
    </listViews>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Area__c</columns>
        <columns>Sub_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.INDUSTRY</field>
            <operation>equals</operation>
            <value>Other</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Accounts_Validate</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Country__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Validate</value>
        </filters>
        <label>All Accounts: Validate</label>
    </listViews>
    <listViews>
        <fullName>All_Non_Validate_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PARENT_NAME</columns>
        <columns>Country__c</columns>
        <columns>Office_Type__c</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Validate</value>
        </filters>
        <label>All Non Validate Accounts</label>
    </listViews>
    <listViews>
        <fullName>Core_Group_Orgs</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Memberships__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Memberships__c</field>
            <operation>includes</operation>
            <value>Core Group</value>
        </filters>
        <label>Core Group Orgs</label>
    </listViews>
    <listViews>
        <fullName>Implementer_Multinational</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Annual_Budget__c</columns>
        <columns>ACCOUNT.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Implementer - Multinational</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
        </filters>
        <label>Implementer - Multinational</label>
    </listViews>
    <listViews>
        <fullName>IndiaAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <label>Country: India</label>
    </listViews>
    <listViews>
        <fullName>India_Contact_Upload</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Office_Type__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT_SOURCE</field>
            <operation>equals</operation>
            <value>Div2 India upload</value>
        </filters>
        <label>India Contact Upload</label>
    </listViews>
    <listViews>
        <fullName>Mozambique_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Country__c</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Mozambique</value>
        </filters>
        <label>Country: Mozambique</label>
    </listViews>
    <listViews>
        <fullName>My_Accounts_Active</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Country__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Accounts: Active</label>
    </listViews>
    <listViews>
        <fullName>My_Accounts_Passive</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Passive</value>
        </filters>
        <label>My Accounts: Passive</label>
    </listViews>
    <listViews>
        <fullName>My_Accounts_Validate</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Validate</value>
        </filters>
        <label>My Accounts: Validate</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Top_Level_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>Memberships__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
        </filters>
        <label>Top Level Accounts</label>
    </listViews>
    <validationRules>
        <fullName>Account_Add_Parents_Account</fullName>
        <active>false</active>
        <description>Force to add a parent account if Office Type isn&apos;t HQ</description>
        <errorConditionFormula>ISPICKVAL(Office_Type__c, &apos;HQ&apos;)</errorConditionFormula>
        <errorMessage>If this is not an HQ account you must select the parent account.  You may need to create an HQ account for this organization.</errorMessage>
    </validationRules>
</CustomObject>